--- a/src/components/features/ItemSummary/ItemSummary.module.scss
+++ b/src/components/features/ItemSummary/ItemSummary.module.scss
@@ -7,9 +7,8 @@
   text-decoration: none;
   border: 1px solid lighten($color-dark, 70%);
   transition: $transition;
-  min-height: 250px;
-  max-height: 275px;
-  padding: $base-size;
+  height: 275px;
+  padding: ($base-size * 1.25) ($base-size * 2);
   background: $color-light;
 
   &:hover {
