Add next, previous page functionality, add loader and error components

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,6 +3,7 @@ $color-dark: #222f3e;
 $color-bg: #c8d6e5;
 $color-primary: #FFE81F;
 $color-secondary: #000;
+$color-bg-light: #43a5cf;
 $color-success: #01916d;
 
 $font-header: 'News Cycle', sans-serif;
